# PyTubeSync

./: README.md  meson.build  org.fosscu.kanishk.json
.flatpak-builder/cache/refs/heads/x86_64-org.fosscu.kanishk.json/: init
.flatpak-builder/checksums/: x86_64-org.fosscu.kanishk.json
data/: meson.build  org.fosscu.kanishk.appdata.xml.in  org.fosscu.kanishk.desktop.in  org.fosscu.kanishk.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  pytubesync.gresource.xml  pytubesync.in  window.py  window.ui
